# ambient-memory-log

./: .env.example  .gitignore  README.md  pyproject.toml
config/: room-speakers.json
deploy/launchd/: com.ambient-memory.api.plist  com.ambient-memory.capture-agent.plist  com.ambient-memory.dual-capture.plist  com.ambient-memory.room-enrichment.plist  com.ambient-memory.worker.plist
docs/: operator-setup.md  ops-machine-setup.md  teammate-setup.md
docs/ops/: smoke-test.md  voiceprint-script.md
migrations/: env.py
migrations/versions/: 20260402_0001_initial_schema.py  20260403_0002_prefix_aa_tables.py  20260403_0003_expand_voiceprint_provider_id.py  20260410_0004_add_canonical_utterance_enrichments.py  20260410_0005_extend_room_enrichments_for_v2.py  20260413_0006_add_raw_speaker_fields_to_canonical_utterances.py
scripts/: start-capture-agent.sh  start-dual-capture.sh
src/ambient_memory/: cli.py  config.py  db.py  models.py
tests/: test_cli.py  test_config.py  test_docs.py  test_enrollment_config.py  test_import_config.py  test_migrations_env.py  test_room_window_speech_gate_docs.py  test_worker_config.py
tests/api/: test_search.py
tests/capture/: test_agent.py  test_device_discovery.py  test_ffmpeg.py  test_spool.py  test_uploader.py
tests/db/: test_models.py  test_voiceprints.py
tests/enrollment/: test_live.py
tests/importing/: test_recordings.py
tests/integrations/: test_assemblyai_client.py  test_openai_room_enrichment_client.py  test_openai_room_retranscription_client.py  test_pyannote_client.py
tests/pipeline/: test_dedup.py  (+10 more)
(+47 files in other folders)
